--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/eslint-module": "^3.0.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/test-utils": "^1.2.1",
+    "autoprefixer": "^10.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
+    "eslint-import-resolver-alias": "^1.1.2",
     "jest": "^27.0.5",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19",
     "vue-jest": "^3.0.4"
   }
 }
