--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@nuxtjs/vuetify": "^1.12.1",
     "@vue/cli-service": "^4.5.15",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/test-utils": "^1.2.1",
