--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@nuxtjs/eslint-module": "^3.0.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue-loader": "^15.9.8"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
@@ -23,9 +24,12 @@
     "autoprefixer": "^10.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
+    "deepmerge": "^4.2.2",
     "eslint-import-resolver-alias": "^1.1.2",
     "jest": "^27.0.5",
     "postcss": "^8.3.11",
+    "sass": "^1.32.13",
+    "sass-loader": "^12.3.0",
     "tailwindcss": "^2.2.19",
     "vue-jest": "^3.0.4"
   }
