--- a/package.json
+++ b/package.json
@@ -1,36 +1,81 @@
 {
-  "name": "yessirkep-task",
+  "name": "nuxt_seed",
   "version": "1.0.0",
+  "description": "seed for new projects based on nuxtJs",
+  "author": "unknown",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest"
+    "lint": "eslint --fix-dry-run ./ --ext .js,.vue",
+    "test": "jest",
+    "postinstall": "husky install"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "7880"
+    }
   },
   "dependencies": {
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "vue-loader": "^15.9.8"
+    "@nuxtjs/auth-next": "5.0.0-1613647907.37b1156",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/gtm": "^2.4.0",
+    "@nuxtjs/sentry": "^5.0.2",
+    "@sentry/browser": "^6.2.0",
+    "axios": "^0.21.1",
+    "centrifuge": "^2.7.1",
+    "core-js": "^3.8.3",
+    "nuxt": "^2.14.12",
+    "typescript": "^4.1.5",
+    "vue-pdf": "^4.3.0",
+    "vuetify": "^2.4.4"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "@nuxtjs/vuetify": "^1.12.1",
-    "@vue/cli-service": "^4.5.15",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/vuetify": "^1.0.0",
+    "@vue/babel-preset-app": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "@vue/eslint-config-airbnb": "^5.3.0",
-    "@vue/test-utils": "^1.2.1",
-    "autoprefixer": "^10.4.0",
+    "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^27.0.5",
-    "deepmerge": "^4.2.2",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-import-resolver-alias": "^1.1.2",
-    "jest": "^27.0.5",
-    "postcss": "^8.3.11",
-    "sass": "^1.32.13",
-    "sass-loader": "^12.3.0",
-    "tailwindcss": "^2.2.19",
-    "vue-jest": "^3.0.4"
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-webpack-plugin": "^2.5.2",
+    "husky": "^5.1.1",
+    "jest": "^26.6.3",
+    "jest-localstorage-mock": "^2.4.6",
+    "jest-serializer-vue": "^2.0.2",
+    "jest-watch-typeahead": "^0.6.1",
+    "lint-staged": "^10.0.0",
+    "ts-jest": "^26.5.1",
+    "vue-jest": "^3.0.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm run test",
+      "pre-push": "npm run lint && npm run test"
+    }
+  },
+  "lint-staged": {
+    "*.vue": [
+      "eslint --fix-dry-run",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --fix-dry-run",
+      "git add"
+    ]
   }
 }
